	* Added feature #485: Hookrequest for ~ TemplaVoila unlink doesn't work for Non-Admins (thanks to Tolleiv Nietsch)

2010-04-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #14051: htmlArea RTE: Streamline the RTE loading process
	* Added feature #14057: htmlArea RTE: Extjize the RTE ajax requests.
	* Added feature #14058: htmlArea RTE: update some WebKit dom methods.

2010-04-09  Michael Stucki  <michael@typo3.org>

	* Fixed bug #13959: Core autoloader should accept class names only (could lead to remote command execution). Thanks to Helmut Hummel and Marcus Krause for providing a fix.

2010-04-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #14035: htmlArea RTE: Use sprite for toolbar icons
	* Follow-up to feature #14035: htmlArea RTE: Use sprite for toolbar icons
	* Updated htmlArea RTE version to 1.9.2

2010-04-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13828: Login cause JS error if not in frame (access to parent is not allowed)
	* Added feature #12818: Feature: border class is hardcoded  [css styled content] (thanks to Susanne Moog)
	* Fixed bug #13693: Backend doesn't use pageRenderer methods

2010-04-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13956: htmlArea RTE: Editing area is collapsed when the RTE is loaded inside a hidden tab in Safari

2010-04-06  Francois Suter  <francois@typo3.org>

	* Added feature #11316: Add a "No Frame" option [css styled content] (thanks to Susanne Moog)
	* Added feature #13296: Scheduler: Add option to disable the sample tasks

2010-04-06  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #13977: Improve OpenID association handling

2010-04-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14004: htmlArea RTE: Applying color or font repeatedly produces nested span elements

2010-04-05  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14003: "Check for extension updates" does not always find latest version

2010-04-05  Xavier Perseguers  <typo3@perseguers.ch>
